[package]
name = "feednotes"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
ratatui = { version = "0.28.1", features = ["unstable-rendered-line-info"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tui-textarea = "0.6.1"
tui-widget-list = "0.12.2"
